Kubernetes/deployment-with-ingress.yaml
#Indicate the version of the Kubernetes API.
apiVersion: apps/v1
#The kind defines the type of resource that the manifest is for, in this case it's for a deployment.
kind: Deployment
#The metadata provides details such as the name of the resource, as well as any labels attached to it.
metadata:
  name: demo-kubernetes-deployment
  labels:
    app: weather-forecast-deployment    
#spec section that defines the configuration for the specified kind of resource.
spec:
  replicas: 2
  #The selector section of the deployment manifest is used by a deployment to know which pods it is managing.
  selector:
    matchLabels:
      app: weather-forecast-webapi      
  #template is a "manifest-inside-a-manifest", in that its contents are effectively the manifest for a pod.
  template:
    metadata:
      #Pods get the label(s) through the template blueprint
      labels:
        app: weather-forecast-webapi
    spec:
      containers:
        - name: weather-forecast-webapi
          image: tuniis/demokubernetesdeployment:latest
          imagePullPolicy: IfNotPresent
          ports:
            #The containerPort defined here describes the port exposed inside the container
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: weather-forecast-svc
  labels:
    app: weather-forecast-webapi
    service: weather-forecast-svc
spec:
  type: ClusterIP #ClusterIP is the default value
  ports:
    - port: 8181 #The port that the service will be exposed on
      targetPort: 80 #Pod/Container port      
      protocol: TCP
  selector:
    app: weather-forecast-webapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-forecast-ingress
  labels: 
    app: weather-forecast-webapi
    service: weather-forecast-svc
  annotations:
    # This annotation uses a special key that is understood by the NGINX ingress controller which 
    # tells the controller it should rewrite the "matched-path" of incoming requests to be
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:    
    - http:
        paths:
        - path: /WeatherForecast   
          pathType: Prefix       
          backend:
            service:
              name: weather-forecast-svc
              port: 
                number: 8181
